changes in index.html for validation

--- a/form.html
+++ b/form.html
@@ -37,7 +37,7 @@
             <button>Submit</button>
         </form>
         
-            <a href="">
+            <a href="./home.html">
                 <button class="homebtn">Home</button>
             </a>
         
